--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -12,5 +12,5 @@
               %dt
                 %span.label.round{class: "#{field.type_css_class} #{field.css_class}"}
                   = field.label
-              %dd.well
+              %dd.panel
                 = field.pretty_value
