[#74753598] Take out dashboard and 'express database' text at sidebar

--- a/app/assets/stylesheets/rails_admin/rails_admin.css.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css.sass
@@ -1,15 +1,11 @@
-@import foundation
-@import font-awesome
+.sidebar .side-nav li a:not(.button)
+  &.nav-level-1
+    padding-left: 2.3rem
 
-.nav-header
-  list-style: none
-  font-weight: bold
+  &.nav-level-2
+    padding-left: 2.3rem
 
-.inline
-  margin: 0
+  &.nav-level-3
+    padding-left: 2.3rem
 
-  li
-    display: inline
 
-.table
-  width: 100%
