--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -3,18 +3,23 @@
     = render 'shared/rails_admin/sidebar'
     .content-body
       = render 'shared/express_admin/messages'
-      - if content_for?(:page_header)
+      - unless params[:action].eql?('dashboard')
         .page-header
           .row
             .small-12.columns
-              = yield :page_header
-      .row
-        .small-12.columns
-          = render template: 'layouts/rails_admin/pjax'
+              %title= "#{@abstract_model.try(:pretty_name) || @page_name} | #{[_get_plugin_name[0] || 'Rails', _get_plugin_name[1] || 'Admin'].join(' ')}"
+              %h1= @page_name
+              = breadcrumb
+        .row
+          .small-12.columns
+            = render template: 'layouts/rails_admin/pjax'
 
 - content_for :page_javascript do
   = javascript_include_tag 'rails_admin/rails_admin'
   :javascript
     RailsAdmin.I18n.init(JSON.parse("#{j I18n.t("admin.js").to_json}"))
+
+- content_for :page_css do
+  = stylesheet_link_tag 'rails_admin/rails_admin'
 
 = render template: 'layouts/express_admin/admin'
