[#74753598] Proper rendering of navigation title and navigation links in sidebar

--- a/app/views/shared/rails_admin/_sidebar.html.haml
+++ b/app/views/shared/rails_admin/_sidebar.html.haml
@@ -1,4 +1,4 @@
 .sidebar-wrapper
 %aside.sidebar
-  %ul.side-nav= main_navigation
-  %ul.side-nav= static_navigation
+  = main_navigation
+  = static_navigation
