[#74753598] Add colorpicker to css dependencies

--- a/app/assets/stylesheets/rails_admin/rails_admin.css.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css.sass
@@ -1,11 +1,21 @@
+//= depend_on_asset "rails_admin/colorpicker/select2.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_background.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_overlay.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_select.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_indic.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_hex.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_r.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_g.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_h.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_s.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_submit.png"
+
+@import "rails_admin/jquery.colorpicker"
+
 .sidebar .side-nav li a:not(.button)
-  &.nav-level-1
+  &.nav-level-1,
+  &.nav-level-2,
+  &.nav-level-3,
     padding-left: 2.3rem
-
-  &.nav-level-2
-    padding-left: 2.3rem
-
-  &.nav-level-3
-    padding-left: 2.3rem
-
-
