--- a/app/views/rails_admin/main/_form_file_upload.html.haml
+++ b/app/views/rails_admin/main/_form_file_upload.html.haml
@@ -6,7 +6,7 @@
   = form.file_field(field.name, field.html_attributes.reverse_merge({ data: { fileupload: true }}))
 - if field.optional? && field.errors.blank? && file && field.delete_method
   %a.button.gray.small{href: '#', :'data-toggle' => 'button', onclick: "$(this).siblings('[type=checkbox]').click(); $(this).siblings('.toggle').toggle('slow'); jQuery(this).toggleClass('alert gray'); return false"}
-    %i.icon-white.icon-trash
+    %i.icon.ion-trash-a
     = I18n.t('admin.actions.delete.menu').capitalize + " #{field.label.downcase}"
   = form.check_box(field.delete_method, style: 'display:none;' )
 - if field.cache_method
