--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -1,7 +1,7 @@
 %input{type: :hidden, name: 'return_to', value: (params[:return_to].presence || request.referer)}
 .form-actions
   %button.button.radius.small{type: "submit", name: "_save", :'data-disable-with' => t("admin.form.save")}
-    %i.icon-white.icon-ok
+    %i.icon.ion-checkmark
     = t("admin.form.save")
   %span.extra_buttons
     - if authorized? :new, @abstract_model
@@ -11,5 +11,5 @@
       %button.button.radius.small{type: "submit", name: "_add_edit", :'data-disable-with' => t("admin.form.save_and_edit")}
         = t("admin.form.save_and_edit")
     %button.button.gray.radius.small{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
-      %i.icon-remove
+      %i.icon.ion-trash-a
       = t("admin.form.cancel")
