--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -4,8 +4,8 @@
   .form-actions
     %input{type: :hidden, name: 'return_to', value: (params[:return_to].presence || request.referer)}
     %button.button.small.radius.alert{type: "submit", :'data-disable-with' => t("admin.form.confirmation")}
-      %i.icon-white.icon-ok
+      %i.icon.ion-checkmark
       = t("admin.form.confirmation")
     %button.button.gray.radius.small{type: "submit", name: "_continue", :'data-disable-with' => t("admin.form.cancel")}
-      %i.icon-remove
+      %i.icon.ion-trash-a
       = t("admin.form.cancel")
