--- a/app/assets/stylesheets/rails_admin/rails_admin.css.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css.sass
@@ -1,3 +1,10 @@
+//= depend_on_asset "rails_admin/aristo/images/bg_fallback.png"
+//= depend_on_asset "rails_admin/aristo/images/ui-icons_222222_256x240.png"
+//= depend_on_asset "rails_admin/aristo/images/ui-icons_454545_256x240.png"
+//= depend_on_asset "rails_admin/aristo/images/icon_sprite.png"
+//= depend_on_asset "rails_admin/aristo/images/slider_handles.png"
+//= depend_on_asset "rails_admin/aristo/images/progress_bar.gif"
+
 //= depend_on_asset "rails_admin/colorpicker/select2.png"
 //= depend_on_asset "rails_admin/colorpicker/custom_background.png"
 //= depend_on_asset "rails_admin/colorpicker/colorpicker_overlay.png"
@@ -13,6 +20,10 @@
 //= depend_on_asset "rails_admin/colorpicker/custom_submit.png"
 
 @import "rails_admin/jquery.colorpicker"
+@import "rails_admin/ra.calendar-additions"
+@import "rails_admin/aristo/jquery-ui-1.8.7.custom"
+@import "rails_admin/jquery.colorpicker"
+@import "rails_admin/ra.widgets"
 
 .sidebar .side-nav li a:not(.button)
   &.nav-level-1,
