--- a/app/views/layouts/rails_admin/pjax.html.haml
+++ b/app/views/layouts/rails_admin/pjax.html.haml
@@ -3,6 +3,6 @@
   $('.nav.nav-list li[data-model="#{@abstract_model.to_param}"]').addClass('active');
 
 .button-bar
-  = menu_for((@abstract_model ? (@object.try(:persisted?) ? :member : :collection) : :root), @abstract_model, @object)
+  = content_for :main_menu
   = content_for :contextual_tabs
 = yield
