--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -111,7 +111,7 @@
     = hidden_field_tag :bulk_action
     - if description.present?
       <b>#{description}</b>
-    %table.table.table-condensed.table-striped
+    %table.table.table-hover
       %thead
         %tr
           %th.shrink
@@ -127,9 +127,10 @@
           - if other_right
             %th.other.right.shrink= "..."
           %th.last.shrink
-      %tbody
+            %tbody
         - @objects.each do |object|
-          %tr{class: "#{@abstract_model.param_key}_row"}
+          - edit_action = action(:edit, @abstract_model, object)
+          %tr{class: "#{@abstract_model.param_key}_row", "data-url" => url_for(action: edit_action.action_name, model_name: @abstract_model.to_param, id: object.id)}
             %td
               = check_box_tag "bulk_ids[]", object.id, false
             - if @other_left_link ||= other_left && index_path(params.except('set').merge(params[:set].to_i != 1 ? {set: (params[:set].to_i - 1)} : {}))
