--- a/app/views/rails_admin/main/_form_nested_many.html.haml
+++ b/app/views/rails_admin/main/_form_nested_many.html.haml
@@ -1,6 +1,6 @@
-.controls{data: { nestedmany: true }}
+.large-9.columns.small-12.controls{data: { nestedmany: true }}
   .btn-group
-    %a.button.toggler{:'data-toggle' => "button", :'data-target' => "#{form.jquery_namespace(field)} > .tab-content, #{form.jquery_namespace(field)} > .controls > .nav", class: (field.active? ? 'active' : '')}
+    %a.button.small.radius.gray.toggler{:'data-toggle' => "button", :'data-target' => "#{form.jquery_namespace(field)} > .tab-content, #{form.jquery_namespace(field)} > .controls > .nav", class: (field.active? ? 'active' : '')}
       %i.icon-white
     - unless field.nested_form[:update_only] || !field.inline_add
       = form.link_to_add "<i class=\"icon ion-plus\"></i> #{wording_for(:link, :new, field.associated_model_config.abstract_model)}".html_safe, field.name, { class: 'button small radius' }
