--- a/app/views/rails_admin/main/history.html.haml
+++ b/app/views/rails_admin/main/history.html.haml
@@ -5,12 +5,12 @@
 - sort_reverse = params[:sort_reverse]
 - path_method = params[:id] ? "history_show_path" : "history_index_path"
 
-= form_tag("", method: "get", class: "search form-inline") do
-  .panel
-    %input{name: "query", type: "search", value: query, placeholder: "#{t("admin.misc.filter")}", class: 'input-small'}
-    %button.button.small.radius{type: "submit", :'data-disable-with' => "<i class='icon ion-refresh'></i> ".html_safe + t("admin.misc.refresh")}
-      %i.icon.ion-refresh
-      = t("admin.misc.refresh")
+-# = form_tag("", method: "get", class: "search form-inline") do
+-#   .panel
+-#     %input{name: "query", type: "search", value: query, placeholder: "#{t("admin.misc.filter")}", class: 'input-small'}
+-#     %button.button.small.radius{type: "submit", :'data-disable-with' => "<i class='icon ion-refresh'></i> ".html_safe + t("admin.misc.refresh")}
+-#       %i.icon.ion-refresh
+-#       = t("admin.misc.refresh")
 %table#history.table.table-striped.table-condensed
   %thead
     %tr
