--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -1,16 +1,6 @@
-- @model_config.show.with(object: @object, view: self, controller: self.controller).visible_groups.each do |fieldset|
-  - unless (fields = fieldset.with(object: @object, view: self, controller: self.controller).visible_fields).empty?
-    - if !(values = fields.map{ |f| f.value.presence }).compact.empty? || !RailsAdmin::config.compact_show_view
-      .fieldset
-        %h4
-          = fieldset.label
-        - if fieldset.help
-          %p= fieldset.help
-        %dl
-          - fields.each_with_index do |field, index|
-            - unless values[index].nil? && RailsAdmin::config.compact_show_view
-              %dt
-                %span.label.round{class: "#{field.type_css_class} #{field.css_class}"}
-                  = field.label
-              %dd.panel
-                = field.pretty_value
+.row
+  .small-12.large-7.columns
+    = render template: "rails_admin/main/edit"
+  .small-12.large-5.columns
+    %h4 History
+    = render template: "rails_admin/main/history"
