--- a/app/assets/stylesheets/rails_admin/rails_admin.css.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css.sass
@@ -5,21 +5,21 @@
 //= depend_on_asset "rails_admin/aristo/images/slider_handles.png"
 //= depend_on_asset "rails_admin/aristo/images/progress_bar.gif"
 
-//= depend_on_asset "express_admin/colorpicker/select2.png"
-//= depend_on_asset "express_admin/colorpicker/custom_background.png"
-//= depend_on_asset "express_admin/colorpicker/colorpicker_overlay.png"
-//= depend_on_asset "express_admin/colorpicker/colorpicker_select.gif"
-//= depend_on_asset "express_admin/colorpicker/custom_indic.gif"
-//= depend_on_asset "express_admin/colorpicker/custom_hex.png"
-//= depend_on_asset "express_admin/colorpicker/custom_rgb_r.png"
-//= depend_on_asset "express_admin/colorpicker/custom_rgb_g.png"
-//= depend_on_asset "express_admin/colorpicker/custom_rgb_b.png"
-//= depend_on_asset "express_admin/colorpicker/custom_hsb_h.png"
-//= depend_on_asset "express_admin/colorpicker/custom_hsb_s.png"
-//= depend_on_asset "express_admin/colorpicker/custom_hsb_b.png"
-//= depend_on_asset "express_admin/colorpicker/custom_submit.png"
+//= depend_on_asset "rails_admin/colorpicker/select2.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_background.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_overlay.png"
+//= depend_on_asset "rails_admin/colorpicker/colorpicker_select.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_indic.gif"
+//= depend_on_asset "rails_admin/colorpicker/custom_hex.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_r.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_g.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_rgb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_h.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_s.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_hsb_b.png"
+//= depend_on_asset "rails_admin/colorpicker/custom_submit.png"
 
-@import "express_admin/jquery.colorpicker"
+@import "rails_admin/jquery.colorpicker"
 @import "rails_admin/ra.calendar-additions"
 @import "rails_admin/aristo/jquery-ui-1.8.7.custom"
 @import "rails_admin/ra.widgets"
