[#74078510] Render icons in appexpress, because its not with expressadmin

--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -21,5 +21,6 @@
 
 - content_for :page_css do
   = stylesheet_link_tag 'rails_admin/rails_admin'
+  = stylesheet_link_tag 'app_express/application'
 
 = render template: 'layouts/express_admin/admin' rescue render template: 'layouts/rails_admin/admin'
