Change sidebar html

--- a/app/views/shared/rails_admin/_sidebar.html.haml
+++ b/app/views/shared/rails_admin/_sidebar.html.haml
@@ -1,4 +1,4 @@
 .sidebar-wrapper
-%aside.sidebar
-  = main_navigation
-  = static_navigation
+  %aside
+    = main_navigation
+    = static_navigation
