--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -4,15 +4,14 @@
     .content-body
       = render 'shared/express_admin/messages' rescue render 'shared/rails/messages'
       - unless params[:action].eql?('dashboard')
-        .page-header
-          .row
-            .small-12.columns
-              %title= "#{@abstract_model.try(:pretty_name) || @page_name} | #{[_get_plugin_name[0] || 'Rails', _get_plugin_name[1] || 'Admin'].join(' ')}"
-              %h1= @page_name
-              = breadcrumb
-        .row
-          .small-12.columns
-            = render template: 'layouts/rails_admin/pjax'
+        .row.page-header
+          %h1= @page_name
+          - if content_for?(:page_header_lead)
+            %p.lead
+              = yield :page_header_lead
+          = breadcrumb
+        .row.page-body
+          = render template: 'layouts/rails_admin/pjax'
 
 - content_for :page_javascript do
   = javascript_include_tag 'rails_admin/rails_admin'
