--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -15,7 +15,7 @@
             - last_used = @most_recent_changes[abstract_model.pretty_name]
             - active = last_used.try(:today?)
             %td
-              %span.show= link_to abstract_model.config.label_plural, index_path, class: 'pjax'
+              %span.show= link_to capitalize_first_letter(abstract_model.config.label_plural), index_path, class: 'pjax'
             %td
               - if last_used
                 = time_ago_in_words last_used
