--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -12,13 +12,7 @@
   %body.rails_admin
     #loading.label.label-warning{style: 'display:none; position:fixed; right:20px; bottom:20px; z-index:100000'}= t('admin.loading')
     .navbar.navbar-fixed-top
-      .navbar-inner
-        .container-fluid
-          %a.brand.pjax{href: dashboard_path}
-            = _get_plugin_name[0] || 'Rails'
-            %small= _get_plugin_name[1] || 'Admin'
-          .nav-collapse
-            = render partial: 'layouts/rails_admin/secondary_navigation'
+      = render "layouts/rails_admin/navigation"
     .container-fluid
       .row-fluid
         .span3
