Move sidebar navigation out into partial so it can be easily overridden

--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -17,8 +17,7 @@
       .row-fluid
         .span3
           .well.sidebar-nav
-            %ul.nav.nav-list= main_navigation
-            %ul.nav.nav-list= static_navigation
+            = render "layouts/rails_admin/sidebar_navigation"
         .span9
           .row-fluid
             .content{:'data-pjax-container' => true}= render template: 'layouts/rails_admin/pjax'
